--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+		"@babel/core": "^7.0.0",
+		"@babel/plugin-syntax-flow": "^7.14.5",
+		"@babel/plugin-transform-react-jsx": "^7.14.9",
+		"@testing-library/dom": "^8.18.1",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^13.0.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/node": "^18.7.18",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"@types/react-router-dom": "^5.3.3",
+		"@types/styled-components": "^5.1.25",
+		"babel-plugin-macros": "^3.1.0",
+		"babel-plugin-styled-components": "^2.0.7",
+		"eslint": "8.23.1",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-react-app": "^7.0.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"prettier": "^2.7.1",
+		"typescript": "^4.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
