--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "vigilantesdosono-dashboard",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
+	"dependencies": {
+		"axios": "^1.0.0-alpha.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-is": "^18.2.0",
+		"react-router-dom": "^6.3.0",
+		"react-scripts": "5.0.1",
+		"styled-components": "^5.3.5"
+	},
+	"devDependencies": {
 		"@babel/core": "^7.0.0",
 		"@babel/plugin-syntax-flow": "^7.14.5",
 		"@babel/plugin-transform-react-jsx": "^7.14.9",
@@ -23,7 +32,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"prettier": "^2.7.1",
 		"typescript": "^4.6.4"
-  },
+	},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
