--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"sourceMap": true,
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
-		"baseUrl": "./",
+		"baseUrl": "./src",
 		"skipLibCheck": true,
 		"noImplicitAny": false,
 		"noFallthroughCasesInSwitch": true,
