--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "Vigilantes do sono",
-	"name": "Dashboard administrativo para exibição de relatórios",
+	"name": "Dashboard para exibição de relatórios",
 	"icons": [
 		{
 			"src": "favicon.ico",
